--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,22 @@
+/* src/app/globals.css */
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  }
-  
-  a {
+    font-family: 'Segoe UI', -apple-system, 'Helvetica Neue', 'Lucida Grande',
+        Roboto, Ebrima, 'Nirmala UI', Gadugi, 'Segoe Xbox Symbol',
+        'Segoe UI Symbol', 'Meiryo UI', 'Khmer UI', Tunga, 'Lao UI', Raavi,
+        'Iskoola Pota', Latha, Leelawadee, 'Microsoft YaHei UI',
+        'Microsoft JhengHei UI', 'Malgun Gothic', 'Estrangelo Edessa',
+        'Microsoft Himalaya', 'Microsoft New Tai Lue', 'Microsoft PhagsPa',
+        'Microsoft Tai Le', 'Microsoft Yi Baiti', 'Mongolian Baiti', 'MV Boli',
+        'Myanmar Text', 'Cambria Math';
+}
+
+a {
     color: inherit;
     text-decoration: none;
-  }
-  
-  * {
+}
+
+* {
     box-sizing: border-box;
-  }
-  
+    padding: 0;
+    margin: 0;
+}
